Add informações importantes ao arquivo .env-exemple para executar a importação do arquivo yaml automaticamente na plataforma dify.

--- a/.env-example
+++ b/.env-example
@@ -1,1 +1,6 @@
 OPENAI_API_KEY=KEY
+EMAIL="email_de_login_do_dify"
+SENHA="senha_do_dify"
+DIFY_URL_IMPORT = "http://localhost/console/api/apps/imports"
+DIFY_URL_lOGIN = "http://localhost/console/api/login"
+DIFY_BASE_URL = "http://localhost/app/"
