--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,8 @@
-OPENAI_API_KEY=KEY
+OPENAI_API_KEY=KEY_da_openai_ou_KEY_do_Deep_Infra
 EMAIL="email_de_login_do_dify"
 SENHA="senha_do_dify"
 DIFY_URL_IMPORT="http://localhost/console/api/apps/imports"
 DIFY_URL_LOGIN="http://localhost/console/api/login"
 DIFY_BASE_URL="http://localhost/app/"
+BASE_URL=url_deep_infra_openai
+MODEL_ID=mode_id_deep_infra
