fix: modelo no env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Dados do provedor do modelo
 OPENAI_API_KEY=KEY_DA_OPENAI_OU_DO_DEEPINFRA
-MODEL_ID="meta-llama/Llama-3.3-70B-Instruct-Turbo"
+MODEL_ID="meta-llama/Llama-3.3-70B-Instruct"
 BASE_URL_DEEP_INFRA="https://api.deepinfra.com/v1/openai"
 
 # Login do Dify localmente
