refactor: atualizado o .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Dados do provedor do modelo
 OPENAI_API_KEY=KEY_DA_OPENAI_OU_DO_DEEPINFRA
-MODEL_ID="meta-llama/Llama-3.3-70B-Instruct"
+MODEL_ID_CONVERSATION="meta-llama/Llama-3.3-70B-Instruct"
+MODEL_ID_TOOLCALLING="Qwen/Qwen2.5-72B-Instruct"
 BASE_URL_DEEP_INFRA="https://api.deepinfra.com/v1/openai"
 
 # Login do Dify localmente
@@ -10,7 +11,7 @@ SENHA="senha_do_dify"
 # URLs do Dify local
 DIFY_URL_IMPORT="http://localhost/console/api/apps/imports"
 DIFY_URL_LOGIN="http://localhost/console/api/login"
-DIFY_BASE_URL="http://localhost/app/"
+DIFY_BASE_URL="https://cloud.dify.ai/apps"
 
 # URLs do Dify Web
 DIFY_WEB_URL_BASE="https://cloud.dify.ai"
