--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ DIFY_BASE_URL="https://cloud.dify.ai/apps"
 # URLs do Dify Web
 DIFY_WEB_URL_BASE="https://cloud.dify.ai"
 DIFY_WEB_URL_IMPORT="https://cloud.dify.ai/console/api/apps/imports"
+FLASK_APP="src/app.py"
+FLASK_ENV=development
